remove repo name from homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://camclark1995.github.io/porosity-calc",
+  "homepage": "http://camclark1995.github.io",
   "name": "porosity-calc",
   "version": "0.1.0",
   "private": true,
